VSE MetaStrip cut crash #45641

Closed
opened 2015-08-01 09:06:54 +02:00 by Nahuel Belich · 5 comments

System Information
Win 7 x64 Nvidia GTX 460

Blender Version
Broken: Hash 12b7850
Worked: (optional)

Short description of error
Cutting metastrips with imagenes and transform or time strips (didnt test other strip types) crashes blender

Exact steps for others to reproduce the error

1- open VSE_METASTRIP_CUT_BUG.7z
2- Cut the strip until crashes(shouldn't be more than a few times)

Video explanation: https://www.youtube.com/watch?v=GQmkgmnD1iI

NOTE: i forgot to mention, for the bug to appear its required that the image inside the MetaStrip has activated the option proxy, and on my tests tend to crash more with project proxies instead of strip proxy, the flickering that i mention on the video its more probable to appear if you deactivate the option proxy from the image strip inside the meta.

**System Information** Win 7 x64 Nvidia GTX 460 **Blender Version** Broken: Hash 12b7850 Worked: (optional) **Short description of error** Cutting metastrips with imagenes and transform or time strips (didnt test other strip types) crashes blender **Exact steps for others to reproduce the error** 1- open [VSE_METASTRIP_CUT_BUG.7z](https://archive.blender.org/developer/F216732/VSE_METASTRIP_CUT_BUG.7z) 2- Cut the strip until crashes(shouldn't be more than a few times) Video explanation: https://www.youtube.com/watch?v=GQmkgmnD1iI NOTE: i forgot to mention, for the bug to appear its required that the image inside the MetaStrip has activated the option proxy, and on my tests tend to crash more with project proxies instead of strip proxy, the flickering that i mention on the video its more probable to appear if you deactivate the option proxy from the image strip inside the meta.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

This issue was referenced by 25f381a9b2

This issue was referenced by 25f381a9b2006d23a4e95018c3c5d1e285d1b2f4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45641
No description provided.