Fix T45641: crash cutting meta-strips